--- a/EFCore.Data/EFCore.Data.csproj
+++ b/EFCore.Data/EFCore.Data.csproj
@@ -11,4 +11,10 @@
     <Folder Include="Repository\Interface\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
