Criando o projeto Model e organizando as camadas.

--- a/EFCore.WebAPI/EFCore.WebAPI.csproj
+++ b/EFCore.WebAPI/EFCore.WebAPI.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EFCore.Data\EFCore.Data.csproj" />
+    <ProjectReference Include="..\EFCore.Data\EFCore.Repository.csproj" />
   </ItemGroup>
 
 </Project>
