--- a/EFCore.WebAPI/appsettings.json
+++ b/EFCore.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Treinamentos\\Udemy\\EFCore\\EFCore\\EFCore.Data\\DataBase\\HeroiDb.mdf;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
